--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,17 @@
   /* background-color: white;
   border-radius: 10px; */
   /* background-color: rgb(241, 241, 241); */
+  position: relative;
+  width: 100%;
+  height: 70vh;
+  width: 80%;
+  
 }
 
 .myapp{
   /* background-color: beige; */
   /* color: black; */
+  font-family: Poppins;
   background: url('./assets/bg.webp') no-repeat;
   background-size: cover;
   display: flex;
@@ -25,6 +31,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+height: 100%;
+object-fit: cover;
 }
 
 @media (width: 500px){
