--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,14 @@ height: 100%;
 object-fit: cover;
 }
 
-@media (width: 500px){
-  /* .appcanvas{
-    height: 800px;
-  } */
-
-  .video{
-    border-radius: 10px;
-    /* box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.367); */
+@media (max-width: 315px){
+  .appcanvas{
+    top: 170px
   }
+
+  .titulo{
+font-size: 30px;
+  }
+
+  
 }
